syntax = "proto3";

package api.auth;

option go_package = "api/internal/proto/auth;authservice";

message Session {
  string id = 1;
  string user_id = 2;
  string expires = 3;
}

service Auth {
  rpc GetSession (GetSessionRequest) returns (Session); 
}

message GetSessionRequest {
}
